--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".Activitys.AdActivity"></activity>
 
         <service
-            android:name=".AdService"
+            android:name=".Service.AdService"
             android:process=":remote"></service>
     </application>
 
